--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ ext {
     androidXLegacySupport = '1.0.0'
     materialVersion = '1.0.0'
     cardVersion = '1.0.0'
-    recyclerViewVersion = '1.0.0'
+    recyclerViewVersion = '1.1.0'
     appCompatVersion = '1.1.0'
     constraintLayoutVersion = "1.1.3"
     roomVersion = '2.2.1'
@@ -47,6 +47,11 @@ ext {
     glideVersion = '4.9.0'
     idleResourceVersion = '3.2.0'
     gsonVersion = '2.8.6'
+    retrofit2Vesion = '2.6.0'
+    okhttp3Version = '3.12.1'
+    rxKotlinVersion = '2.2.0'
+    rxJavaVersion = '2.1.0'
+    koinVersion = '2.0.1'
 }
 
 task clean(type: Delete) {
