--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 androidExtensions {
     experimental = true
@@ -55,10 +54,17 @@ dependencies {
 
     // Dependencies for Architecture Component
     implementation "androidx.room:room-runtime:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
-    //noinspection LifecycleAnnotationProcessorWithJava8
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$archLifecycleVersion"
+    androidTestImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
+
+    // ViewModel Kotlin support
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModelKtxVersion"
+
 
     // Dependencies for Paging
     implementation "androidx.paging:paging-runtime:$pagingVersion"
@@ -67,7 +73,7 @@ dependencies {
     implementation("com.github.bumptech.glide:glide:$glideVersion") {
         exclude group: "androidx"
     }
-    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
