--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
     recyclerViewVersion = '1.1.0'
     appCompatVersion = '1.1.0'
     constraintLayoutVersion = "1.1.3"
-    roomVersion = '2.2.1'
+    roomVersion = '2.2.2'
     archLifecycleVersion = '2.1.0'
     archVersion = '1.1.1'
     junitVersion = '4.12'
@@ -52,6 +52,7 @@ ext {
     rxKotlinVersion = '2.2.0'
     rxJavaVersion = '2.1.0'
     koinVersion = '2.0.1'
+    viewModelKtxVersion = '2.2.0-rc02'
 }
 
 task clean(type: Delete) {
