--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ androidExtensions {
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.gyosanila.mymoviejetpack"
         minSdkVersion 21
@@ -68,6 +68,10 @@ dependencies {
 
     // Dependencies for Paging
     implementation "androidx.paging:paging-runtime:$pagingVersion"
+    // alternatively - without Android dependencies for testing
+    testImplementation "androidx.paging:paging-common:$pagingVersion" // For Kotlin use paging-common-ktx
+    // optional - RxJava support
+    implementation "androidx.paging:paging-rxjava2:$pagingVersion" // For Kotlin use paging-rxjava2-ktx
 
     // Dependencies for Glide
     implementation("com.github.bumptech.glide:glide:$glideVersion") {
@@ -100,4 +104,5 @@ dependencies {
 
     implementation "org.koin:koin-android:$koinVersion"
     implementation "org.koin:koin-android-viewmodel:$koinVersion"
+
 }
